@@ -1,30 +1,70 @@
 group 'com.coretex.core'
-version '1.0-Alpha'
+version '1.0-Beta'
 
 buildscript {
     repositories {
-        maven {
-            url 'https://mymavenrepo.com/repo/JtNoX84ugvVTz5NACWuq/'
-            mavenCentral()
-            maven { url "http://repo.spring.io/snapshot" }
-            maven { url "http://repo.spring.io/milestone" }
-            maven { url 'https://jitpack.io' }
-            maven { url "http://repo.spring.io/libs-release-remote" }
-            maven { url 'http://www.datanucleus.org/downloads/maven2/'}
-            maven { url "https://jetbrains.bintray.com/trove4j/" }
-            maven { url 'https://mymavenrepo.com/repo/Er2QKn4UMp1axP0ll14Z/'}
-        }
+        mavenCentral()
+//        mavenLocal()
+        jcenter()
+        maven { url "http://repo.coretexplatform.com/artifactory/coretex_repo-libs-release/"}
+        maven { url "https://repo.spring.io/milestone" }
+        maven { url 'https://jitpack.io' }
+        maven { url "https://repo.spring.io/libs-release-remote" }
+        maven { url "https://jetbrains.bintray.com/trove4j/" }
     }
     dependencies {
-        classpath(group: 'com.coretex.build.plugin', name: 'build.plugin', version: '1.0-Alpha')
+        classpath(group: 'com.coretex.build.plugin', name: 'build.plugin', version: '1.1-Beta')
+        classpath(group: 'com.bmuschko', name: 'gradle-docker-plugin', version: '6.6.1')
     }
 }
-
 wrapper {
-    gradleVersion = '6.0'
+    gradleVersion = '6.8.2'
 }
 
+apply plugin: 'distribution'
 apply from: "gradle-build/config.gradle"
 apply plugin: 'build.plugin'
 apply from: "gradle-build/subprojects.gradle"
+apply plugin: 'com.bmuschko.docker-remote-api'
+
+distributions {
+    main {
+        distributionBaseName = 'gm-commerce'
+        contents {
+            from projectDir
+            exclude '**/src'
+            exclude 'tmp'
+            exclude '**/*.iml'
+            exclude '**/.idea'
+            exclude '**/.gradle'
+            exclude '**/node_modules'
+            exclude '**/jsbuild'
+            exclude '**/webSrc'
+            exclude '**/commerce_shop/template'
+            exclude '**/genSrc'
+            exclude 'build'
+            exclude 'data'
+        }
+    }
+}
+
+//distTar.enabled = false
+//distZip.enabled = false
+
+import com.bmuschko.gradle.docker.tasks.image.*
+
+task createDockerfile(type: Dockerfile, dependsOn: distTar) {
+    destFile.set(project.layout.buildDirectory.file('distributions/Dockerfile'))
+    from('openjdk:15')
+    addFile("gm-commerce-1.0-Alpha.tar", "/opt/coretex/")
+    workingDir("/opt/coretex/gm-commerce-1.0-Alpha")
+    environmentVariable('JAVA_OPTS', '-Djava.awt.headless=true -server -Xms48m -Xmx512M -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/opt/tmp/heapdump.bin')
+    exposePort(8080)
+}
+//
+task buildImage(type: DockerBuildImage) {
+    dependsOn createDockerfile
+    inputDir = file(createDockerfile.destFile).parentFile
+    images.add('gerasimenkoart/coretex_commerce:latest')
+}
 
